eliminar archivo que no es parte de la tarea

--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,8 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+Tarea_Cripto_4 (1).pdf
+Tarea_Cripto_4 (2).pdf
+Tarea_Cripto_4.pdf
+alice_bob.jpg
+Tarea_Cripto_4 (3).pdf
